# liba

./: .gitignore  CMakeLists.txt  README.md  meson.build
.github/workflows/: main.yml
include/: CMakeLists.txt  liba.h
src/: CMakeLists.txt  compatibility.h  liba.c
subprojects/: munit.wrap
subprojects/packagefiles/: munit.patch
test-unit/: CMakeLists.txt  main.c
